--- a/app.css
+++ b/app.css
@@ -8488,8 +8488,9 @@ th.hide-for-touch {
   background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.5) 59%, rgba(0, 0, 0, 0.5) 100%), url("/images/constr.jpg") no-repeat center center;
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.5) 59%, rgba(0, 0, 0, 0.5) 100%), url("/images/constr.jpg") no-repeat center center;
   background-size: cover;
-  background-position: center bottom; }
-  /* line 249, stdin */
+  background-position: center bottom;
+  background-attachment: fixed; }
+  /* line 250, stdin */
   .out-of-grid img {
     position: absolute;
     width: 20rem;
@@ -8497,7 +8498,7 @@ th.hide-for-touch {
     bottom: 0;
     right: 0;
     left: 0; }
-  /* line 258, stdin */
+  /* line 259, stdin */
   .out-of-grid #home-heading h3 {
     position: absolute;
     bottom: 0;
@@ -8509,7 +8510,7 @@ th.hide-for-touch {
     .out-of-grid {
       height: 600px; } }
 
-/* line 271, stdin */
+/* line 272, stdin */
 .content-wrap {
   margin: 0 auto;
   max-width: 62.5rem;
@@ -8525,7 +8526,7 @@ th.hide-for-touch {
   .content-wrap:after {
     clear: both; }
 
-/* line 278, stdin */
+/* line 279, stdin */
 .overlay-content {
   padding-left: 0.9375rem;
   padding-right: 0.9375rem;
@@ -8533,13 +8534,13 @@ th.hide-for-touch {
   float: left;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%); }
-  /* line 280, stdin */
+  /* line 281, stdin */
   .overlay-content h1 {
     color: #FFFFFF;
     font-weight: bold;
     text-align: center; }
 
-/* line 290, stdin */
+/* line 291, stdin */
 h1, h2, h3, h4, h5, h6 {
   text-align: center;
   text-transform: uppercase;
@@ -8547,28 +8548,28 @@ h1, h2, h3, h4, h5, h6 {
   -webkit-font-smoothing: antialiased;
   color: #FFFFFF; }
 
-/* line 298, stdin */
+/* line 299, stdin */
 p {
   text-align: center;
   text-rendering: geometricPrecision;
   -webkit-font-smoothing: antialiased; }
 
-/* line 304, stdin */
+/* line 305, stdin */
 em {
   color: #222222;
   font-style: normal;
   font-weight: bold; }
 
-/* line 310, stdin */
+/* line 311, stdin */
 section.brown-info {
   margin: 0;
   width: 100%;
   background-color: #563f2d; }
-  /* line 314, stdin */
+  /* line 315, stdin */
   section.brown-info h1, section.brown-info p {
     color: #FFFFFF; }
 
-/* line 319, stdin */
+/* line 320, stdin */
 .home-info {
   margin: 0 auto;
   max-width: 62.5rem;
@@ -8580,18 +8581,18 @@ section.brown-info {
   /* line 240, /Volumes/LaCie2/dev/logan-patrone/bower_components/foundation/scss/foundation/components/_global.scss */
   .home-info:after {
     clear: both; }
-  /* line 321, stdin */
+  /* line 322, stdin */
   .home-info p {
     margin-top: 2rem;
     margin-bottom: 2rem; }
-  /* line 325, stdin */
+  /* line 326, stdin */
   .home-info #home-content {
     padding-left: 0.9375rem;
     padding-right: 0.9375rem;
     width: 100%;
     float: left; }
     @media only screen and (min-width: 64.063em) {
-      /* line 325, stdin */
+      /* line 326, stdin */
       .home-info #home-content {
         display: block;
         padding-left: 0.9375rem;
@@ -8602,7 +8603,7 @@ section.brown-info {
         margin-right: auto;
         float: none; } }
 
-/* line 334, stdin */
+/* line 335, stdin */
 section.white-info {
   margin: 0;
   width: 100%;
@@ -8610,13 +8611,13 @@ section.white-info {
   position: relative;
   padding-top: 2rem; }
   @media only screen and (min-width: 64.063em) {
-    /* line 334, stdin */
+    /* line 335, stdin */
     section.white-info {
       min-height: 42.1875rem; } }
-  /* line 343, stdin */
+  /* line 344, stdin */
   section.white-info h1, section.white-info h2, section.white-info h3, section.white-info p {
     color: #222222; }
-  /* line 346, stdin */
+  /* line 347, stdin */
   section.white-info .gray-block {
     position: absolute;
     top: 50%;
@@ -8626,11 +8627,11 @@ section.white-info {
     background-color: #a0a8a0;
     display: none; }
     @media only screen and (min-width: 64.063em) {
-      /* line 346, stdin */
+      /* line 347, stdin */
       section.white-info .gray-block {
         display: block; } }
 
-/* line 360, stdin */
+/* line 361, stdin */
 #att-info {
   margin: 0 auto;
   max-width: 62.5rem;
@@ -8643,14 +8644,14 @@ section.white-info {
   #att-info:after {
     clear: both; }
 
-/* line 364, stdin */
+/* line 365, stdin */
 #att-info-inner {
   padding-left: 0.9375rem;
   padding-right: 0.9375rem;
   width: 100%;
   float: left; }
   @media only screen and (min-width: 64.063em) {
-    /* line 364, stdin */
+    /* line 365, stdin */
     #att-info-inner {
       display: block;
       padding-left: 0.9375rem;
@@ -8661,7 +8662,7 @@ section.white-info {
       margin-right: auto;
       float: none; } }
 
-/* line 372, stdin */
+/* line 373, stdin */
 #info-blocks {
   margin: 0 auto;
   max-width: 62.5rem;
@@ -8675,7 +8676,7 @@ section.white-info {
   #info-blocks:after {
     clear: both; }
 
-/* line 377, stdin */
+/* line 378, stdin */
 .info-block {
   padding-left: 0.9375rem;
   padding-right: 0.9375rem;
@@ -8686,16 +8687,16 @@ section.white-info {
   background: none;
   padding-bottom: 2rem;
   border: 0px solid #FFFFFF; }
-  /* line 384, stdin */
+  /* line 385, stdin */
   .info-block h3 {
     margin-top: 1rem;
     margin-bottom: 0;
     text-transform: uppercase;
     color: #222222; }
-  /* line 390, stdin */
+  /* line 391, stdin */
   .info-block p {
     margin-bottom: 0; }
-  /* line 393, stdin */
+  /* line 394, stdin */
   .info-block a.bio {
     display: block;
     width: 10rem;
@@ -8711,54 +8712,54 @@ section.white-info {
     text-transform: uppercase;
     -webkit-transition: background-color 0.5s ease-in-out;
             transition: background-color 0.5s ease-in-out; }
-    /* line 407, stdin */
+    /* line 408, stdin */
     .info-block a.bio:hover {
       background-color: #a0a8a0; }
-  /* line 411, stdin */
+  /* line 412, stdin */
   .info-block .fa {
     margin: 1rem 0 0 0;
     color: #563f2d;
     font-size: 2rem;
     -webkit-transition: background-color 0.5s ease-in-out;
             transition: background-color 0.5s ease-in-out; }
-    /* line 416, stdin */
+    /* line 417, stdin */
     .info-block .fa:hover {
       color: #a0a8a0; }
   @media only screen and (min-width: 64.063em) {
-    /* line 377, stdin */
+    /* line 378, stdin */
     .info-block {
       padding-left: 0.9375rem;
       padding-right: 0.9375rem;
       width: 33.33333%;
       float: left;
       padding: 0; }
-      /* line 424, stdin */
+      /* line 425, stdin */
       .info-block:hover .showme {
         max-height: 10rem;
         visibility: visible; }
-      /* line 428, stdin */
+      /* line 429, stdin */
       .info-block:hover .info-bottom-arrow {
         display: none; } }
   @media only screen and (min-width: 64.063em) {
-    /* line 433, stdin */
+    /* line 434, stdin */
     .info-block .inner {
       background-color: #FFFFFF;
       position: relative;
       border-radius: 10px;
       margin: 2rem;
       padding: 0 0 2rem 0; }
-      /* line 441, stdin */
+      /* line 442, stdin */
       .info-block .inner img {
         padding: 1rem; } }
 
-/* line 448, stdin */
+/* line 449, stdin */
 a:hover {
   color: #a0a8a0; }
 
-/* line 452, stdin */
+/* line 453, stdin */
 .bio-modal {
   padding: 0; }
-  /* line 454, stdin */
+  /* line 455, stdin */
   .bio-modal .bio-header {
     background-color: #a0a8a0;
     margin: 0 auto;
@@ -8771,7 +8772,7 @@ a:hover {
     /* line 240, /Volumes/LaCie2/dev/logan-patrone/bower_components/foundation/scss/foundation/components/_global.scss */
     .bio-modal .bio-header:after {
       clear: both; }
-    /* line 457, stdin */
+    /* line 458, stdin */
     .bio-modal .bio-header h3 {
       display: block;
       padding-top: 1rem;
@@ -8783,7 +8784,7 @@ a:hover {
       float: left;
       color: #FFFFFF;
       text-transform: uppercase; }
-  /* line 469, stdin */
+  /* line 470, stdin */
   .bio-modal .bio-info {
     margin: 0 auto;
     max-width: 62.5rem;
@@ -8795,14 +8796,14 @@ a:hover {
     /* line 240, /Volumes/LaCie2/dev/logan-patrone/bower_components/foundation/scss/foundation/components/_global.scss */
     .bio-modal .bio-info:after {
       clear: both; }
-    /* line 471, stdin */
+    /* line 472, stdin */
     .bio-modal .bio-info .bio-cv {
       padding-left: 0.9375rem;
       padding-right: 0.9375rem;
       width: 75%;
       float: left;
       padding: 3rem; }
-    /* line 475, stdin */
+    /* line 476, stdin */
     .bio-modal .bio-info .bio-extra {
       padding-left: 0.9375rem;
       padding-right: 0.9375rem;
@@ -8810,27 +8811,27 @@ a:hover {
       float: left;
       padding: 0;
       text-align: center; }
-      /* line 479, stdin */
+      /* line 480, stdin */
       .bio-modal .bio-info .bio-extra p {
         font-weight: bold;
         text-align: center;
         margin-bottom: 0; }
-      /* line 484, stdin */
+      /* line 485, stdin */
       .bio-modal .bio-info .bio-extra img {
         margin-bottom: 1rem; }
-  /* line 489, stdin */
+  /* line 490, stdin */
   .bio-modal a.close-reveal-modal {
     color: #222222; }
-  /* line 492, stdin */
+  /* line 493, stdin */
   .bio-modal p {
     color: #222222;
     text-align: left;
     font-size: 1rem; }
-  /* line 497, stdin */
+  /* line 498, stdin */
   .bio-modal em {
     font-weight: bold;
     font-style: normal; }
-  /* line 501, stdin */
+  /* line 502, stdin */
   .bio-modal .fa {
     margin: 1rem 0 0 0;
     color: #563f2d;
@@ -8838,11 +8839,11 @@ a:hover {
     text-align: center;
     -webkit-transition: background-color 0.5s ease-in-out;
             transition: background-color 0.5s ease-in-out; }
-    /* line 507, stdin */
+    /* line 508, stdin */
     .bio-modal .fa:hover {
       color: #a0a8a0; }
 
-/* line 513, stdin */
+/* line 514, stdin */
 .info-bottom-arrow {
   display: none;
   position: absolute;
@@ -8851,10 +8852,10 @@ a:hover {
   text-align: center;
   background: none; }
   @media only screen and (min-width: 64.063em) {
-    /* line 513, stdin */
+    /* line 514, stdin */
     .info-bottom-arrow {
       display: block; } }
-  /* line 523, stdin */
+  /* line 524, stdin */
   .info-bottom-arrow .fa {
     color: #222222;
     background-color: #FFFFFF;
@@ -8865,7 +8866,7 @@ a:hover {
     border-radius: 50%; }
 
 @media only screen and (min-width: 64.063em) {
-  /* line 534, stdin */
+  /* line 535, stdin */
   .showme {
     max-height: 0;
     overflow: hidden;
@@ -8873,12 +8874,12 @@ a:hover {
     -webkit-transition: visibility 0s, max-height 0.5s ease-in-out;
             transition: visibility 0s, max-height 0.5s ease-in-out; } }
 
-/* line 543, stdin */
+/* line 544, stdin */
 #practice {
   background: url("/images/wood.jpg");
   background-size: cover; }
 
-/* line 548, stdin */
+/* line 549, stdin */
 #practice-contain {
   margin: 0 auto;
   max-width: 62.5rem;
@@ -8895,11 +8896,11 @@ a:hover {
   #practice-contain:after {
     clear: both; }
   @media only screen and (min-width: 64.063em) {
-    /* line 548, stdin */
+    /* line 549, stdin */
     #practice-contain {
       padding-left: 0;
       padding-right: 0; } }
-  /* line 558, stdin */
+  /* line 559, stdin */
   #practice-contain #description {
     padding-left: 0.9375rem;
     padding-right: 0.9375rem;
@@ -8907,33 +8908,33 @@ a:hover {
     float: left;
     padding: 2rem;
     background: #FFFFFF; }
-    /* line 562, stdin */
+    /* line 563, stdin */
     #practice-contain #description h1, #practice-contain #description h2, #practice-contain #description h3, #practice-contain #description h4 {
       color: #222222;
       text-align: left; }
-    /* line 566, stdin */
+    /* line 567, stdin */
     #practice-contain #description p {
       color: #222222;
       text-align: left; }
-    /* line 570, stdin */
+    /* line 571, stdin */
     #practice-contain #description ul {
       color: #a0a8a0;
       list-style: none; }
     @media only screen and (min-width: 64.063em) {
-      /* line 558, stdin */
+      /* line 559, stdin */
       #practice-contain #description {
         padding-left: 0.9375rem;
         padding-right: 0.9375rem;
         width: 58.33333%;
         float: left;
         padding: 2rem; } }
-  /* line 579, stdin */
+  /* line 580, stdin */
   #practice-contain #pretty {
     display: none;
     background: url("/images/image4.jpg");
     background-size: cover; }
     @media only screen and (min-width: 64.063em) {
-      /* line 579, stdin */
+      /* line 580, stdin */
       #practice-contain #pretty {
         display: block;
         padding-left: 0.9375rem;
@@ -8944,12 +8945,12 @@ a:hover {
 /*
    FOOTER SECTION
    ========================================================================== */
-/* line 595, stdin */
+/* line 596, stdin */
 input[type=text], textarea {
   color: #a0a8a0;
   border-radius: 10px; }
 
-/* line 600, stdin */
+/* line 601, stdin */
 input::-webkit-input-placeholder {
   color: #a0a8a0; }
 input::-moz-placeholder {
@@ -8959,7 +8960,7 @@ input:-ms-input-placeholder {
 input::placeholder {
   color: #a0a8a0; }
 
-/* line 604, stdin */
+/* line 605, stdin */
 textarea::-webkit-input-placeholder {
   color: #a0a8a0; }
 textarea::-moz-placeholder {
@@ -8969,11 +8970,11 @@ textarea:-ms-input-placeholder {
 textarea::placeholder {
   color: #a0a8a0; }
 
-/* line 608, stdin */
+/* line 609, stdin */
 textarea {
   min-height: 10rem; }
 
-/* line 612, stdin */
+/* line 613, stdin */
 button#submit-button {
   padding: 0;
   margin: 1rem 0 0 0;
@@ -8982,24 +8983,24 @@ button#submit-button {
   background-color: #a0a8a0;
   border-radius: 50%;
   font-size: 1.5rem; }
-  /* line 620, stdin */
+  /* line 621, stdin */
   button#submit-button:hover {
     background-color: #768076; }
 
-/* line 625, stdin */
+/* line 626, stdin */
 .footer-section {
   background: #563f2d;
   min-height: 100px; }
-  /* line 628, stdin */
+  /* line 629, stdin */
   .footer-section p {
     color: #a0a8a0;
     margin-top: 2rem; }
-  /* line 632, stdin */
+  /* line 633, stdin */
   .footer-section h1, .footer-section h2, .footer-section h3 {
     color: #a0a8a0;
     margin-bottom: 2rem; }
 
-/* line 638, stdin */
+/* line 639, stdin */
 section#contact {
   margin: 0;
   max-width: 62.5rem;
@@ -9015,7 +9016,7 @@ section#contact {
   section#contact:after {
     clear: both; }
 
-/* line 645, stdin */
+/* line 646, stdin */
 #map-contain {
   padding-left: 0.9375rem;
   padding-right: 0.9375rem;
@@ -9027,7 +9028,7 @@ section#contact {
   width: 100%;
   height: 25rem; }
 
-/* line 654, stdin */
+/* line 655, stdin */
 #map-contain iframe {
   position: absolute;
   top: 0;
@@ -9035,7 +9036,7 @@ section#contact {
   width: 100% !important;
   height: 100% !important; }
 
-/* line 662, stdin */
+/* line 663, stdin */
 #contact-contain {
   margin: 0 auto;
   max-width: 62.5rem;
@@ -9048,7 +9049,7 @@ section#contact {
   /* line 240, /Volumes/LaCie2/dev/logan-patrone/bower_components/foundation/scss/foundation/components/_global.scss */
   #contact-contain:after {
     clear: both; }
-  /* line 665, stdin */
+  /* line 666, stdin */
   #contact-contain .contact-form {
     padding-left: 0.9375rem;
     padding-right: 0.9375rem;
@@ -9059,7 +9060,7 @@ section#contact {
     float: none;
     text-align: center; }
     @media only screen and (min-width: 64.063em) {
-      /* line 665, stdin */
+      /* line 666, stdin */
       #contact-contain .contact-form {
         display: block;
         padding-left: 0.9375rem;
@@ -9070,15 +9071,15 @@ section#contact {
         margin-right: auto;
         float: none; } }
 
-/* line 675, stdin */
+/* line 676, stdin */
 #contact-success {
   background-color: #563f2d;
   border: none; }
-  /* line 678, stdin */
+  /* line 679, stdin */
   #contact-success h2 {
     text-align: center; }
 
-/* line 683, stdin */
+/* line 684, stdin */
 #lp-info-contain {
   margin: 0 auto;
   max-width: 62.5rem;
@@ -9090,13 +9091,13 @@ section#contact {
   /* line 240, /Volumes/LaCie2/dev/logan-patrone/bower_components/foundation/scss/foundation/components/_global.scss */
   #lp-info-contain:after {
     clear: both; }
-  /* line 685, stdin */
+  /* line 686, stdin */
   #lp-info-contain img {
     display: block;
     margin: auto;
     margin-top: 2rem;
     max-width: 4rem; }
-  /* line 691, stdin */
+  /* line 692, stdin */
   #lp-info-contain #lp-info {
     padding-left: 0.9375rem;
     padding-right: 0.9375rem;
@@ -9106,7 +9107,7 @@ section#contact {
     margin-right: auto;
     float: none; }
     @media only screen and (min-width: 64.063em) {
-      /* line 691, stdin */
+      /* line 692, stdin */
       #lp-info-contain #lp-info {
         display: block;
         padding-left: 0.9375rem;
