done except for picture and maybe some fine tuning

--- a/app.css
+++ b/app.css
@@ -8813,25 +8813,28 @@ a:hover {
       text-align: center; }
       /* line 480, stdin */
       .bio-modal .bio-info .bio-extra p {
-        font-weight: bold;
+        font-weight: bolder;
         text-align: center;
         margin-bottom: 0; }
       /* line 485, stdin */
       .bio-modal .bio-info .bio-extra img {
         margin-bottom: 1rem; }
-  /* line 490, stdin */
+      /* line 488, stdin */
+      .bio-modal .bio-info .bio-extra h1, .bio-modal .bio-info .bio-extra h2, .bio-modal .bio-info .bio-extra h3, .bio-modal .bio-info .bio-extra h4, .bio-modal .bio-info .bio-extra h5, .bio-modal .bio-info .bio-extra h6 {
+        color: #222222; }
+  /* line 493, stdin */
   .bio-modal a.close-reveal-modal {
     color: #222222; }
-  /* line 493, stdin */
+  /* line 496, stdin */
   .bio-modal p {
     color: #222222;
     text-align: left;
     font-size: 1rem; }
-  /* line 498, stdin */
+  /* line 501, stdin */
   .bio-modal em {
     font-weight: bold;
     font-style: normal; }
-  /* line 502, stdin */
+  /* line 505, stdin */
   .bio-modal .fa {
     margin: 1rem 0 0 0;
     color: #563f2d;
@@ -8839,11 +8842,11 @@ a:hover {
     text-align: center;
     -webkit-transition: background-color 0.5s ease-in-out;
             transition: background-color 0.5s ease-in-out; }
-    /* line 508, stdin */
+    /* line 511, stdin */
     .bio-modal .fa:hover {
       color: #a0a8a0; }
 
-/* line 514, stdin */
+/* line 517, stdin */
 .info-bottom-arrow {
   display: none;
   position: absolute;
@@ -8852,10 +8855,10 @@ a:hover {
   text-align: center;
   background: none; }
   @media only screen and (min-width: 64.063em) {
-    /* line 514, stdin */
+    /* line 517, stdin */
     .info-bottom-arrow {
       display: block; } }
-  /* line 524, stdin */
+  /* line 527, stdin */
   .info-bottom-arrow .fa {
     color: #222222;
     background-color: #FFFFFF;
@@ -8866,7 +8869,7 @@ a:hover {
     border-radius: 50%; }
 
 @media only screen and (min-width: 64.063em) {
-  /* line 535, stdin */
+  /* line 538, stdin */
   .showme {
     max-height: 0;
     overflow: hidden;
@@ -8874,12 +8877,12 @@ a:hover {
     -webkit-transition: visibility 0s, max-height 0.5s ease-in-out;
             transition: visibility 0s, max-height 0.5s ease-in-out; } }
 
-/* line 544, stdin */
+/* line 547, stdin */
 #practice {
   background: url("/images/wood.jpg");
   background-size: cover; }
 
-/* line 549, stdin */
+/* line 552, stdin */
 #practice-contain {
   margin: 0 auto;
   max-width: 62.5rem;
@@ -8896,11 +8899,11 @@ a:hover {
   #practice-contain:after {
     clear: both; }
   @media only screen and (min-width: 64.063em) {
-    /* line 549, stdin */
+    /* line 552, stdin */
     #practice-contain {
       padding-left: 0;
       padding-right: 0; } }
-  /* line 559, stdin */
+  /* line 562, stdin */
   #practice-contain #description {
     padding-left: 0.9375rem;
     padding-right: 0.9375rem;
@@ -8908,33 +8911,33 @@ a:hover {
     float: left;
     padding: 2rem;
     background: #FFFFFF; }
-    /* line 563, stdin */
+    /* line 566, stdin */
     #practice-contain #description h1, #practice-contain #description h2, #practice-contain #description h3, #practice-contain #description h4 {
       color: #222222;
       text-align: left; }
-    /* line 567, stdin */
+    /* line 570, stdin */
     #practice-contain #description p {
       color: #222222;
       text-align: left; }
-    /* line 571, stdin */
+    /* line 574, stdin */
     #practice-contain #description ul {
       color: #a0a8a0;
       list-style: none; }
     @media only screen and (min-width: 64.063em) {
-      /* line 559, stdin */
+      /* line 562, stdin */
       #practice-contain #description {
         padding-left: 0.9375rem;
         padding-right: 0.9375rem;
         width: 58.33333%;
         float: left;
         padding: 2rem; } }
-  /* line 580, stdin */
+  /* line 583, stdin */
   #practice-contain #pretty {
     display: none;
     background: url("/images/image4.jpg");
     background-size: cover; }
     @media only screen and (min-width: 64.063em) {
-      /* line 580, stdin */
+      /* line 583, stdin */
       #practice-contain #pretty {
         display: block;
         padding-left: 0.9375rem;
@@ -8945,12 +8948,12 @@ a:hover {
 /*
    FOOTER SECTION
    ========================================================================== */
-/* line 596, stdin */
+/* line 599, stdin */
 input[type=text], textarea {
   color: #a0a8a0;
   border-radius: 10px; }
 
-/* line 601, stdin */
+/* line 604, stdin */
 input::-webkit-input-placeholder {
   color: #a0a8a0; }
 input::-moz-placeholder {
@@ -8960,7 +8963,7 @@ input:-ms-input-placeholder {
 input::placeholder {
   color: #a0a8a0; }
 
-/* line 605, stdin */
+/* line 608, stdin */
 textarea::-webkit-input-placeholder {
   color: #a0a8a0; }
 textarea::-moz-placeholder {
@@ -8970,11 +8973,11 @@ textarea:-ms-input-placeholder {
 textarea::placeholder {
   color: #a0a8a0; }
 
-/* line 609, stdin */
+/* line 612, stdin */
 textarea {
   min-height: 10rem; }
 
-/* line 613, stdin */
+/* line 616, stdin */
 button#submit-button {
   padding: 0;
   margin: 1rem 0 0 0;
@@ -8983,24 +8986,24 @@ button#submit-button {
   background-color: #a0a8a0;
   border-radius: 50%;
   font-size: 1.5rem; }
-  /* line 621, stdin */
+  /* line 624, stdin */
   button#submit-button:hover {
     background-color: #768076; }
 
-/* line 626, stdin */
+/* line 629, stdin */
 .footer-section {
   background: #563f2d;
   min-height: 100px; }
-  /* line 629, stdin */
+  /* line 632, stdin */
   .footer-section p {
     color: #a0a8a0;
     margin-top: 2rem; }
-  /* line 633, stdin */
+  /* line 636, stdin */
   .footer-section h1, .footer-section h2, .footer-section h3 {
     color: #a0a8a0;
     margin-bottom: 2rem; }
 
-/* line 639, stdin */
+/* line 642, stdin */
 section#contact {
   margin: 0;
   max-width: 62.5rem;
@@ -9016,7 +9019,7 @@ section#contact {
   section#contact:after {
     clear: both; }
 
-/* line 646, stdin */
+/* line 649, stdin */
 #map-contain {
   padding-left: 0.9375rem;
   padding-right: 0.9375rem;
@@ -9028,7 +9031,7 @@ section#contact {
   width: 100%;
   height: 25rem; }
 
-/* line 655, stdin */
+/* line 658, stdin */
 #map-contain iframe {
   position: absolute;
   top: 0;
@@ -9036,7 +9039,7 @@ section#contact {
   width: 100% !important;
   height: 100% !important; }
 
-/* line 663, stdin */
+/* line 666, stdin */
 #contact-contain {
   margin: 0 auto;
   max-width: 62.5rem;
@@ -9049,7 +9052,7 @@ section#contact {
   /* line 240, /Volumes/LaCie2/dev/logan-patrone/bower_components/foundation/scss/foundation/components/_global.scss */
   #contact-contain:after {
     clear: both; }
-  /* line 666, stdin */
+  /* line 669, stdin */
   #contact-contain .contact-form {
     padding-left: 0.9375rem;
     padding-right: 0.9375rem;
@@ -9060,7 +9063,7 @@ section#contact {
     float: none;
     text-align: center; }
     @media only screen and (min-width: 64.063em) {
-      /* line 666, stdin */
+      /* line 669, stdin */
       #contact-contain .contact-form {
         display: block;
         padding-left: 0.9375rem;
@@ -9071,15 +9074,15 @@ section#contact {
         margin-right: auto;
         float: none; } }
 
-/* line 676, stdin */
+/* line 679, stdin */
 #contact-success {
   background-color: #563f2d;
   border: none; }
-  /* line 679, stdin */
+  /* line 682, stdin */
   #contact-success h2 {
     text-align: center; }
 
-/* line 684, stdin */
+/* line 687, stdin */
 #lp-info-contain {
   margin: 0 auto;
   max-width: 62.5rem;
@@ -9091,13 +9094,13 @@ section#contact {
   /* line 240, /Volumes/LaCie2/dev/logan-patrone/bower_components/foundation/scss/foundation/components/_global.scss */
   #lp-info-contain:after {
     clear: both; }
-  /* line 686, stdin */
+  /* line 689, stdin */
   #lp-info-contain img {
     display: block;
     margin: auto;
     margin-top: 2rem;
     max-width: 4rem; }
-  /* line 692, stdin */
+  /* line 695, stdin */
   #lp-info-contain #lp-info {
     padding-left: 0.9375rem;
     padding-right: 0.9375rem;
@@ -9107,7 +9110,7 @@ section#contact {
     margin-right: auto;
     float: none; }
     @media only screen and (min-width: 64.063em) {
-      /* line 692, stdin */
+      /* line 695, stdin */
       #lp-info-contain #lp-info {
         display: block;
         padding-left: 0.9375rem;
