--- a/app.css
+++ b/app.css
@@ -8485,8 +8485,7 @@ th.hide-for-touch {
   margin: 0;
   width: 100%;
   height: 300px;
-  background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.5) 59%, rgba(0, 0, 0, 0.5) 100%), url("/images/constr.jpg") no-repeat center center;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.5) 59%, rgba(0, 0, 0, 0.5) 100%), url("/images/constr.jpg") no-repeat center center;
+  background: url("/images/constr.jpg") no-repeat center center;
   background-size: cover;
   background-position: center bottom;
   background-attachment: fixed; }
