--- a/app.css
+++ b/app.css
@@ -8500,7 +8500,7 @@ th.hide-for-touch {
   /* line 259, stdin */
   .out-of-grid #home-heading h3 {
     position: absolute;
-    bottom: 0;
+    bottom: -0.5rem;
     right: 0;
     left: 0;
     margin: auto; }
