--- a/scss/app.scss
+++ b/scss/app.scss
@@ -258,7 +258,7 @@ $xxlarge-range: (120.063em, 99999999em);
   #home-heading{
     h3{
       position: absolute;
-      bottom: 0;
+      bottom: -0.5rem;
       right: 0;
       left: 0;
       margin: auto;
